--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -45,11 +45,8 @@ jobs:
 
     - name: Extraindo 
       run: tar -xf google-cloud-cli-444.0.0-linux-x86_64.tar.gz
-
-    - name: using bq
-      run: cd ./google-cloud-sdk/bin
-
+      
     - name: bq
-      run: ls -ltr
+      run: ./google-cloud-sdk/bin/bq --help
 
       
