--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -50,7 +50,7 @@ jobs:
       run: | 
         for i in $(ls ./sql)
         do
-        echo $i
+          ./google-cloud-sdk/bin/bq $(cat $i)
         done
       
       
